[package]
name = "nv_driver_helper"
version = "0.1.0"
authors = ["peter <peterghost86@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1"
winres = "0.1"

[profile.release]
opt-level = 'z'
lto = true
panic = "abort"
codegen-units = 1
incremental = false

[dependencies]
fltk = "1"
fltk-theme = "0.4"
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }
csv = "1"
serde = { version = "1.0", features = ["derive"] }
version-compare = "0.1"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
confy = "0.4.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
